# backend-IOT

./: .gitignore  .gitmodules  BLE_QUICK_REFERENCE.md  BLE_REFACTORING_STATUS.md  LICENSE  LICENSE.txt  PHASE_2_COMPLETION.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  PHASE_5_COMPLETION.md  README.md  SECURITY.md  Third-party-notice.txt  config.json
backend-server/: CMakeLists.txt  README.md  toolchain.cmake
backend-server/docs/: PHASE_2_SUMMARY.md  PHASE_2_VERIFICATION.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md
backend-server/src/: App.cpp  AppComponent.hpp  CorsInterceptor.hpp
backend-server/src/ble/: ble.cpp  ble.hpp
backend-server/src/config/: Constants.hpp  LogAdapt.hpp
backend-server/src/controller/: BackendController.hpp  BleController.hpp  GraphController.hpp  RoomsController.hpp  ServiceController.hpp  SettingsController.hpp  UserController.hpp
backend-server/src/dto/: BleDtos.hpp
backend-server/src/model/: Lobby.cpp  Lobby.hpp  Room.cpp  Room.hpp
backend-server/src/rooms/: GraphListener.cpp  GraphListener.hpp  Lobby.cpp  Lobby.hpp  Peer.cpp  Peer.hpp  Room.cpp  Room.hpp
backend-server/src/service/: AuthService.cpp  AuthService.hpp  IService.hpp  MqttService.hpp  ServiceManager.cpp  ServiceManager.hpp  ServiceRegistry.hpp
backend-server/src/service/ble/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BleCharacteristicManager.cpp  BleCharacteristicManager.hpp  BleDataProcessor.cpp  BleDataProcessor.hpp  BleDeviceManager.cpp  BleDeviceManager.hpp  BleFrameBuilder.hpp  BleService.cpp  BleService.cpp.backup  BleService.hpp  BleService.hpp.backup  BleSimulation.cpp  BleSimulation.hpp  BlueZAdapter.cpp  BlueZAdapter.hpp  COMPLETION_REPORT.md  CharRegistry.hpp  EventLoopManager.cpp  EventLoopManager.hpp  PHASE_1_SUMMARY.md  README.md  REFACTORING_PLAN.md  ble-readme.md
backend-server/src/websocket/: BaseSocketListener.cpp  BaseSocketListener.hpp  GraphListener.cpp  GraphListener.hpp  GraphWebSocket.cpp  GraphWebSocket.hpp  Peer.cpp  Peer.hpp  WSComm.cpp  WSComm.hpp
backend-server/utility/: install-oatpp-modules.sh
